dance hall days landing page styling and ui

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -74,6 +74,11 @@
 @import 'redesign/components/email-subscription';
 @import 'redesign/components/seo-content';
 @import 'redesign/components/carousel-strap';
+@import 'redesign/components/how-it-works';
+@import 'redesign/components/styling-tips';
+
+// Pages
+@import 'redesign/pages/landing-dhd';
 
 // Generic
 @import 'redesign/generic/helpers';
