--- a/app/assets/stylesheets/redesign/base/_buttons.scss
+++ b/app/assets/stylesheets/redesign/base/_buttons.scss
@@ -1,3 +1,43 @@
 /* [Buttons]
 -------------------------------------------------------*/
+.cta-square {
+  display: table;
+  padding: 10px;
+  width: 110px;
+  height: 110px;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 0.875em;
+  font-weight: 500;
+  color: $c-neutral-black;
+  border: solid $c-neutral-black 1px;
 
+  span {
+    display: table-cell;
+    vertical-align: middle;
+  }
+
+  &:hover,
+  &:focus {
+    color: $c-neutral-black;
+    opacity: .8;
+  }
+
+  &.skin-light,
+  &.skin-light:hover,
+  &.skin-light:focus {
+    color: $c-neutral-white;
+    border-color: $c-neutral-white;
+  }
+
+  @include mobile {
+
+    & {
+      width: 130px;
+      height: 130px;
+      font-size: 1em;
+    }
+
+  }
+
+}
