--- a/app/assets/stylesheets/redesign/components/_media.scss
+++ b/app/assets/stylesheets/redesign/components/_media.scss
@@ -42,6 +42,19 @@
 
   }
 
+  &.keep-ratio {
+    padding-bottom: 40%; // default
+
+    .inner-wrap {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+
+  }
+
   &.skin-light .title > * {
     color: $c-neutral-white;
   }
