--- a/engines/admin_ui/app/views/admin_ui/content/pages/index.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/content/pages/index.html.slim
@@ -1,5 +1,14 @@
 - content_for :page_title do
   | Pages
+br
+= form_tag content_pages_path, method: "get", class: 'form-horizontal' do
+  .form-group
+    .input-group
+      label.col-sm-2.control-label Search
+      .col-sm-10= text_field_tag :search, params[:search], class: 'form-control'
+      span.input-group-btn
+        = button_tag type: "submit", class: "btn btn-default" do
+          span.fa.fa-search
 
 = paginate collection, theme: 'admin_ui'
 
