--- a/app/views/layouts/redesign/_javascript.html.erb
+++ b/app/views/layouts/redesign/_javascript.html.erb
@@ -22,4 +22,11 @@
     window.app.user_moodboard.updateData(moodboard_data);
     window.app.shopping_cart.setItemCount(<%= current_order.item_count %>);
   });
+
+  $(document).ready(function () {
+    initProductCollectionImageHover({
+      selector: 'body',
+      delegate: '.img-product'
+    });
+  });
 </script>
