--- a/app/views/products/collections/_product_core_details.html.slim
+++ b/app/views/products/collections/_product_core_details.html.slim
@@ -1,5 +1,5 @@
 = link_to collection_product_path(product, color: product.color.try(:name)) do
-  = image_tag product.images.first, :alt => product.name, :class => "img-product img-responsive", 'data-hover' => product.images.last
+  = image_tag product.images.first, :alt => product.name, :class => "img-product img-responsive", 'data-hover' => product.images.last, 'data-original' => product.images.first
 .details.text-center
   span.name
     = product.name
