--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -7,61 +7,68 @@ ruby:
   = react_component('HeroCarousel', skin: 'skin-light',
     assets: [{link: dance_hall_days_collection_path, src: '/assets/home-page-tiles/hero-4', alt: 'Dance Hall Days - Shop all formal dresses'}, {link: lookbook_path + '/photo-finish', src: '/assets/home-page-tiles/hero-2', alt: 'Photo FINISH - Shop Now'}, {link: lookbook_path + '/make-a-statement', src: '/assets/home-page-tiles/hero-3', alt: 'Bambi - Shop the Collection'}])
 
-section.carousel-strap.instagram
-  .container
-    .outer-wrap
-      h2.title-line-on-sides
-        .inner-wrap SHOP INSTAGRAM
-      = react_component('InstagramCarousel', skin: '',
-        assets: [{link: link_to_dresses + '/dress-sienna-656?color=black', src: '/assets/homepage/instagram/No4_micah.jpg', user: '@micahgianneli', cta: "Shop Micah's Look"},
-                  {link: link_to_dresses + '/dress-midnight-ryder-648?color=black', src: '/assets/homepage/instagram/No10_Rozalia.jpg', user: '@rozalia_russian', cta: "Shop Rozalia's Look"},
-                  {link: link_to_dresses + '/dress-about-you-628?color=gypsy-queen', src: '/assets/homepage/instagram/No12_Nada.jpg', user: '@nadaadellex', cta: "Shop Nada's Look"},
-                  {link: link_to_dresses + '/dress-emma-kate-495?color=white', src: '/assets/homepage/instagram/No2_Sjana.jpg', user: '@sjanaelise', cta: "Shop Sjana's Look"},
-                  {link: link_to_dresses + '/dress-emma-kate-495?color=white', src: '/assets/homepage/instagram/No1_Marzia.jpg', user: '@itsmarziapie', cta: "Shop Marzia's Look"},
-                  {link: link_to_dresses + '/dress-mira-two-piece-586?color=cobalt-blue', src: '/assets/homepage/instagram/No3_janni.jpg', user: '@jannid', cta: "Shop Janni's Look"},
-                  {link: link_to_dresses + '/dress-first-in-line-467?color=mint', src: '/assets/homepage/instagram/No5_Jen.jpg', user: '@frmheadtotoe', cta: "Shop Jen's Look"},
-                  {link: link_to_dresses + '/dress-gypsy-crown-624?color=gold', src: '/assets/homepage/instagram/No6_Nyane.jpg', user: '@nyanelebajoa', cta: "Shop Nyane's Look"},
-                  {link: link_to_dresses + '/dress-mesh-debutante-516?color=black', src: '/assets/homepage/instagram/No7_Walkin.jpg', user: '@walkinwonderland', cta: "Shop this Look"},
-                  {link: link_to_dresses + '/dress-elegant-angel-508?color=black', src: '/assets/homepage/instagram/No8_Not_Jess.jpg', user: '@notjessfashion', cta: "Shop this Look"},
-                  {link: link_to_dresses + '/dress-elle-455?color=black', src: '/assets/homepage/instagram/No9_Chayenne.jpg', user: '@cheyennet', cta: "Shop Cheyenne's Look"},
-                  {link: link_to_dresses + '/dress-azalea-floral-two-piece-479?color=pink-azalea-floral', src: '/assets/homepage/instagram/No11_Allie.jpg', user: '@alliemarieevans', cta: "Shop Allie's Look"},
-                  {link: link_to_dresses + '/dress-lace-genie-649?color=black', src: '/assets/homepage/instagram/No13_Yan.jpg', user: '@yanyanchan', cta: "Shop Yan's Look"},
-                  {link: link_to_dresses + '/dress-about-you-628?color=gypsy-queen', src: '/assets/homepage/instagram/No14_Kirsten.jpg', user: '@kirstenzellers', cta: "Shop Kirsten's Look"},
-                  {link: link_to_dresses + '/dress-laced-heartline-262?color=black', src: '/assets/homepage/instagram/No15_kristy.jpg', user: '@kristyjgreen', cta: "Shop Kristy's Look"}])
+  section.banner-sale
+    .container
+      = link_to dresses_path, class: 'media-wrap'
+        img src='#{image_path("home-page-tiles/tile-sale-full.jpg")}' srcset='
+        #{image_path("home-page-tiles/tile-sale-sml.jpg")} 768w, 
+        #{image_path("home-page-tiles/tile-sale-full.jpg")} 1024w' alt='SALE 20% off sitewide - Shop the Sale'
 
-/! Content Section
-section.container.content-block.home-main-content
-  .row
-    .main.col-md-7
-      = link_to skirts_collection_path, class: 'media-wrap'
-        = image_tag 'home-page-tiles/tile-skirting.jpg', alt: 'New! Skirting the issue - Shop our separates'
-      = render 'shared/redesign/tabs_collection'
-      = link_to build_taxon_path('Two Piece'), class: 'media-wrap'
-        = image_tag 'home-page-tiles/tile-double-or-nothing-sml.jpg', alt: 'Double or nothing - Shop our best 2-piece styles'
-      = link_to fast_making_dresses_path, class: 'media-wrap'
-        = image_tag 'home-page-tiles/tile-express-making.png', alt: 'Express making - Dresses made in 48 hours.'
-      = link_to bridesmaid_collection_path, class: 'media-wrap'
-        = image_tag 'home-page-tiles/tile-bridesmaid-chic.jpg', alt: 'BRIDESMAID CHIC - Getting it right for your #girlsquad'
+  section.carousel-strap.instagram
+    .container
+      .outer-wrap
+        h2.title-line-on-sides
+          .inner-wrap SHOP INSTAGRAM
+        = react_component('InstagramCarousel', skin: '',
+          assets: [{link: link_to_dresses + '/dress-sienna-656?color=black', src: '/assets/homepage/instagram/No4_micah.jpg', user: '@micahgianneli', cta: "Shop Micah's Look"},
+                    {link: link_to_dresses + '/dress-midnight-ryder-648?color=black', src: '/assets/homepage/instagram/No10_Rozalia.jpg', user: '@rozalia_russian', cta: "Shop Rozalia's Look"},
+                    {link: link_to_dresses + '/dress-about-you-628?color=gypsy-queen', src: '/assets/homepage/instagram/No12_Nada.jpg', user: '@nadaadellex', cta: "Shop Nada's Look"},
+                    {link: link_to_dresses + '/dress-emma-kate-495?color=white', src: '/assets/homepage/instagram/No2_Sjana.jpg', user: '@sjanaelise', cta: "Shop Sjana's Look"},
+                    {link: link_to_dresses + '/dress-emma-kate-495?color=white', src: '/assets/homepage/instagram/No1_Marzia.jpg', user: '@itsmarziapie', cta: "Shop Marzia's Look"},
+                    {link: link_to_dresses + '/dress-mira-two-piece-586?color=cobalt-blue', src: '/assets/homepage/instagram/No3_janni.jpg', user: '@jannid', cta: "Shop Janni's Look"},
+                    {link: link_to_dresses + '/dress-first-in-line-467?color=mint', src: '/assets/homepage/instagram/No5_Jen.jpg', user: '@frmheadtotoe', cta: "Shop Jen's Look"},
+                    {link: link_to_dresses + '/dress-gypsy-crown-624?color=gold', src: '/assets/homepage/instagram/No6_Nyane.jpg', user: '@nyanelebajoa', cta: "Shop Nyane's Look"},
+                    {link: link_to_dresses + '/dress-mesh-debutante-516?color=black', src: '/assets/homepage/instagram/No7_Walkin.jpg', user: '@walkinwonderland', cta: "Shop this Look"},
+                    {link: link_to_dresses + '/dress-elegant-angel-508?color=black', src: '/assets/homepage/instagram/No8_Not_Jess.jpg', user: '@notjessfashion', cta: "Shop this Look"},
+                    {link: link_to_dresses + '/dress-elle-455?color=black', src: '/assets/homepage/instagram/No9_Chayenne.jpg', user: '@cheyennet', cta: "Shop Cheyenne's Look"},
+                    {link: link_to_dresses + '/dress-azalea-floral-two-piece-479?color=pink-azalea-floral', src: '/assets/homepage/instagram/No11_Allie.jpg', user: '@alliemarieevans', cta: "Shop Allie's Look"},
+                    {link: link_to_dresses + '/dress-lace-genie-649?color=black', src: '/assets/homepage/instagram/No13_Yan.jpg', user: '@yanyanchan', cta: "Shop Yan's Look"},
+                    {link: link_to_dresses + '/dress-about-you-628?color=gypsy-queen', src: '/assets/homepage/instagram/No14_Kirsten.jpg', user: '@kirstenzellers', cta: "Shop Kirsten's Look"},
+                    {link: link_to_dresses + '/dress-laced-heartline-262?color=black', src: '/assets/homepage/instagram/No15_kristy.jpg', user: '@kristyjgreen', cta: "Shop Kristy's Look"}])
 
-    aside.col-md-5
-      = react_component('BlogPosts')
-  .row.as-seen-in
-    hr
-    .as-seen-in-text AS SEEN IN
-  .row.as-seen-in-partners
-    img.refinery29 alt='Refinery29'    src='/assets/footer/publisher/refinery29.png'
-    img.elle       alt='Elle'          src='/assets/footer/publisher/elle.png'
-    img.marie      alt='Marie'         src='/assets/footer/publisher/marie.png'
-    img.russh      alt='Russh'         src='/assets/footer/publisher/russh.png'
-    img.glamour    alt='Glamour'       src='/assets/footer/publisher/glamour.png'
-    img.wwd        alt='WWD'           src='/assets/footer/publisher/wwd.png'
-    img.teen       alt='Teenvogue'     src='/assets/footer/publisher/teen.png'
-    img.popsugar   alt='Popsugar'      src='/assets/footer/publisher/popsugar.png'
-    img.nylon      alt='Nylon'         src='/assets/footer/publisher/nylon.png'
-    img.cosmo      alit='Cosmopolitan' src='/assets/footer/publisher/cosmo.png'
+  /! Content Section
+  section.container.content-block.home-main-content
+    .row
+      .main.col-md-7
+        = link_to skirts_collection_path, class: 'media-wrap'
+          = image_tag 'home-page-tiles/tile-skirting.jpg', alt: 'New! Skirting the issue - Shop our separates'
+        = render 'shared/redesign/tabs_collection'
+        = link_to build_taxon_path('Two Piece'), class: 'media-wrap'
+          = image_tag 'home-page-tiles/tile-double-or-nothing-sml.jpg', alt: 'Double or nothing - Shop our best 2-piece styles'
+        = link_to fast_making_dresses_path, class: 'media-wrap'
+          = image_tag 'home-page-tiles/tile-express-making.png', alt: 'Express making - Dresses made in 48 hours.'
+        = link_to bridesmaid_collection_path, class: 'media-wrap'
+          = image_tag 'home-page-tiles/tile-bridesmaid-chic.jpg', alt: 'BRIDESMAID CHIC - Getting it right for your #girlsquad'
 
-/! Email Subscription
-= render 'shared/redesign/newsletter_signup'
+      aside.col-md-5
+        = react_component('BlogPosts')
+    .row.as-seen-in
+      hr
+      .as-seen-in-text AS SEEN IN
+    .row.as-seen-in-partners
+      img.refinery29 alt='Refinery29'    src='/assets/footer/publisher/refinery29.png'
+      img.elle       alt='Elle'          src='/assets/footer/publisher/elle.png'
+      img.marie      alt='Marie'         src='/assets/footer/publisher/marie.png'
+      img.russh      alt='Russh'         src='/assets/footer/publisher/russh.png'
+      img.glamour    alt='Glamour'       src='/assets/footer/publisher/glamour.png'
+      img.wwd        alt='WWD'           src='/assets/footer/publisher/wwd.png'
+      img.teen       alt='Teenvogue'     src='/assets/footer/publisher/teen.png'
+      img.popsugar   alt='Popsugar'      src='/assets/footer/publisher/popsugar.png'
+      img.nylon      alt='Nylon'         src='/assets/footer/publisher/nylon.png'
+      img.cosmo      alit='Cosmopolitan' src='/assets/footer/publisher/cosmo.png'
 
-/! SEO content
-= render 'shared/redesign/seo_content'
+  /! Email Subscription
+  = render 'shared/redesign/newsletter_signup'
+
+  /! SEO content
+  = render 'shared/redesign/seo_content'
