--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -72,39 +72,39 @@ ruby:
 = content_for :head
   - @product.cropped_images.each_with_index do |image, index|
     = tag :meta, name: "crop_image_#{index}", content: image.original
-
-#gift-modal.hidden
-  .left-panel
-    center
-      img.logo alt='mobilelogo' src='/assets/logo/logo-mobile.svg'
-      .heading
-        span.you YOU
-        span.deserve DESERVE
-        br
-        span.vip VIP
-        span.treatment TREATMENT
-      .mess
-        .so-we-want SO WE WANT TO GIVE YOU
-        .something SOMETHING SPECIAL.
-      hr
-      img.modelco alt='modelco' src='/assets/gift/modelco.jpg'
-  .right-panel
-    center
-      .four-lipsticks
-        img.casablanca alt='casablanca' src='/assets/gift/casablanca.jpg' data-sku='gift-Color:Casablanca'
-        img.socialize  alt='socialize'  src='/assets/gift/socialize.jpg'  data-sku='gift-Color:Socialize'
-        img.morocco    alt='morocco'    src='/assets/gift/morocco.jpg'    data-sku='gift-Color:Morocco'
-        img.firered    alt='firedred'   src='/assets/gift/firered.jpg'    data-sku='gift-Color:FireRed'
-      .mess
-        | Select* your <b>FREE</b> ModalCo gift <b>VALUED AT $24</b> & make your dress pop.
-      input.checkout-btn value="CHECK OUT"
-      .tc
-        center
-          span
-            | *If your selected colour in unavailable, we'll send you the closest colour match.
+- if Features.active?(:gift)
+  #gift-modal.hidden
+    .left-panel
+      center
+        img.logo alt='mobilelogo' src='/assets/logo/logo-mobile.svg'
+        .heading
+          span.you YOU
+          span.deserve DESERVE
           br
-          span
-            | While stocks last.
+          span.vip VIP
+          span.treatment TREATMENT
+        .mess
+          .so-we-want SO WE WANT TO GIVE YOU
+          .something SOMETHING SPECIAL.
+        hr
+        img.modelco alt='modelco' src='/assets/gift/modelco.jpg'
+    .right-panel
+      center
+        .four-lipsticks
+          img.casablanca alt='casablanca' src='/assets/gift/casablanca.jpg' data-sku='gift-Color:Casablanca'
+          img.socialize  alt='socialize'  src='/assets/gift/socialize.jpg'  data-sku='gift-Color:Socialize'
+          img.morocco    alt='morocco'    src='/assets/gift/morocco.jpg'    data-sku='gift-Color:Morocco'
+          img.firered    alt='firedred'   src='/assets/gift/firered.jpg'    data-sku='gift-Color:FireRed'
+        .mess
+          | Select* your <b>FREE</b> ModalCo gift <b>VALUED AT $24</b> & make your dress pop.
+        input.checkout-btn value="CHECK OUT"
+        .tc
+          center
+            span
+              | *If your selected colour in unavailable, we'll send you the closest colour match.
+            br
+            span
+              | While stocks last.
 
 .slides-outer-wrapper
   .slides-inner-wrapper
