--- a/app/assets/stylesheets/redesign/stylesheets/styles.css
+++ b/app/assets/stylesheets/redesign/stylesheets/styles.css
@@ -8071,6 +8071,10 @@ xheader
   margin-left: 20px;
 }
 
+#cart .shopping-bag-masterpass {
+  margin-top:20px;
+}
+
 /* line 77, ../sass/_cart.scss */
 #cart.speed-in {
   right: 0;
