use asset pipeline to include custom colors

--- a/app/assets/stylesheets/redesign/product/_products_collections.css.scss
+++ b/app/assets/stylesheets/redesign/product/_products_collections.css.scss
@@ -1,3 +1,7 @@
+$product-tick-image-url:    image-url("product-collections/tick.svg");
+$product-rosebud-image-url: image-url("product-color-images/Rosebud.png");
+$product-cheetah-image-url: image-url("product-color-images/Cheetah.png");
+
 .products-collections {
 	padding-top: 40px;
 
@@ -167,22 +171,22 @@
 			background-color: #FFB7B7 !important;
 		}
 		.Cheetah{
-			background-image: url("product-collections/Cheetah.png");
+			background-image: $product-cheetah-image-url;
 			background-size: 140px 40px;
 			background-position: 0px 0px;
 		}
 		.Cheetah.thumb-true{
-			background-image: url("product-collections/tick.svg"), url("product-collections/Cheetah.png");
+			background-image: $product-tick-image-url, $product-cheetah-image-url;
 			background-size: 14px 14px, 140px 40px ;
 			background-repeat: no-repeat, no-repeat;
 			background-position: 4px 2px, 0px 0px;
 		}
 		.Rosebud{
-			background-image: url("product-collections/Rosebud.png");
+			background-image: $product-rosebud-image-url;
 			background-size: 200px 65px;
 		}
 		.Rosebud.thumb-true{
-			background-image: url("product-collections/tick.svg"), url("product-collections/Rosebud.png");
+			background-image: $product-rosebud-image-url, $product-rosebud-image-url;
 			background-size: 14px 14px, 200px 65px ;
 			background-repeat: no-repeat, no-repeat;
 			background-position: 4px 2px, 0px 0px;
