--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -76,6 +76,7 @@
 @import 'redesign/components/carousel-strap';
 @import 'redesign/components/how-it-works';
 @import 'redesign/components/styling-tips';
+@import 'redesign/components/banners';
 
 // Pages
 @import 'redesign/pages/landing-dhd';
