CTO: add more conditions to gift

--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -107,7 +107,7 @@
 
 
       h2 GIFT WITH PURCHASE
-      
+
       ul
         li We may from time to time promote a free gift with purchase.
         li The free gift with purchase promotion applies only to new orders placed on our Site and fully paid after the date the free gift with purchase promotion is made available on the Site.
@@ -117,6 +117,7 @@
         li You may be sent an alternative colour choice in your free gift due to the unavailability of your original colour choice.
         li The free gift with purchase cannot be redeemed, refunded or exchanged for cash or any other discount.
         li We reserve the right to withdraw, modify, vary or terminate any free gift with purchase promotion at any time for any reason.
+        li The free gift will be dispatched separately. Please allow 3 weeks for delivery. 
 
       h2 COPYRIGHT
 
