--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -49,7 +49,9 @@
         li.footer-nav--item
           = link_to 'FAQs & Shipping', faqs_path
         li.footer-nav--item
-          = link_to 'New Sizing', size_guide_path, :style => 'color:red'
+          = link_to 'New Sizing', size_guide_path
+        li.footer-nav--item
+          = link_to 'Our Journey', yelp_path
 
     .col-md-2.col-sm-3.hidden-xs.hidden-sm.last-col
       ul.footer-nav
