--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -45,8 +45,8 @@ ruby:
         = render 'shared/redesign/tabs_collection'
         = link_to build_taxon_path('Two Piece'), class: 'media-wrap'
           = image_tag 'home-page-tiles/tile-double-or-nothing-sml.jpg', alt: 'Double or nothing - Shop our best 2-piece styles'
-        = link_to fast_making_dresses_path, class: 'media-wrap'
-          = image_tag 'home-page-tiles/tile-express-making.png', alt: 'Express making - Dresses made in 48 hours.'
+        = link_to dresses_path + '?lpi=modelco2&permalink=dance-hall&limit=72', class: 'media-wrap'
+          = image_tag 'home-page-tiles/tile-ModelCo.jpg', alt: 'You deserve VIP treatment so we want to give you something special.'
         = link_to bridesmaid_collection_path, class: 'media-wrap'
           = image_tag 'home-page-tiles/tile-bridesmaid-chic.jpg', alt: 'BRIDESMAID CHIC - Getting it right for your #girlsquad'
 
