[feat] tweak gift modal
I tweak gift modal

--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -97,7 +97,7 @@ ruby:
           img.firered    alt='firedred'   src='/assets/gift/firered.jpg'    data-sku='gift-Color:FireRed'
         .mess
           | Select* your <b>FREE</b> ModalCo gift <b>VALUED AT $24</b> & make your dress pop.
-        input.checkout-btn value="CHECK OUT"
+        input.checkout-btn.before-click readonly="readonly" value="CHECK OUT"
         .tc
           center
             span
