updated dresses nav menu

--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -97,7 +97,7 @@ ruby:
   ul
     li.title colour
     = render partial: 'layouts/redesign/color'
-  ul
+  ul.two-cols
     li.title events
     = render partial: 'layouts/redesign/event'
 
