Update comp terms

--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -117,7 +117,7 @@
         li You may be sent an alternative colour choice in your free gift due to the unavailability of your original colour choice.
         li The free gift with purchase cannot be redeemed, refunded or exchanged for cash or any other discount.
         li We reserve the right to withdraw, modify, vary or terminate any free gift with purchase promotion at any time for any reason.
-        li The free gift will be dispatched separately. Please allow 3 weeks for delivery. 
+        li The free gift will be dispatched separately. Please allow 3 weeks for delivery.
 
       h2 COPYRIGHT
 
@@ -201,3 +201,44 @@
       p The failure of the Company to exercise or enforce any right or provision of these Terms shall not constitute a waiver or relinquishment to any extent of the Company's right to assert or rely upon any such provision or right in that or any other instance, and the same shall be and remain in full force and effect. If any provision of these Terms is found by a court of competent jurisdiction, statute, rule or otherwise to be invalid, the parties nevertheless agree that the remaining provisions shall not be affected thereby and shall continue in full force and effect, and such provision may be modified or severed from these Terms to the extent necessary to make such provision enforceable and consistent with the remainder of these Terms.
 
       p Updated May 2015
+
+      hr
+
+      h2 WIN A DRESS FOR YOU AND YOUR BESTIE COMPETITION TERMS AND CONDITIONS
+
+      p The promoter is Fame & Partners Pty Ltd ABN 83 162 501 064 (Fame) whose registered office is at Level 1, Studio 10, 140 – 144 Cleveland St Chippendale New South Wales 2008 Australia, . Fame will facilitate the fulfilment and management of the promotion and any associated prizes.
+
+      p Entry is open internationally to anyone aged 16 years or older. Directors, officers and employees of Fame and any associated companies and agencies as well as the immediate families of each of these parties are not eligible to participate in the promotion.
+
+      p The promotion begins at 9:00am AEST 21 October 2015 and closes 9:00am AEST 28 October 2015.
+
+      p
+        | To be eligible to win the prize you must:
+        br
+        | (a) Regram the official Fame promotion entry image (the Image) that has been posted to the official Fame Instagram account;
+        br
+        | (b) Follow the @fameandpartners account:
+        br
+        | (c) Tag each entry with #famebestie and @fameandpartners;
+        br
+        | (d) All eligible entries must include the answer to this question as the caption in 25 words or less “Which Fame and Partners dress do you need in your life and why?”
+        br
+        | (e) Your Instagram account must be set to “public” for the duration of this promotion;
+        br
+        | (f) Your entry must be your own original work; and
+        br
+        | (g) You can enter as many times as you like, but you must supply a new caption for each entry.
+
+      p The best entry will be judged by Fame in its absolute discretion. Fame’s decision is final and no correspondence will be entered into. The winner will be announced on 2 November 2015 and will be notified via their Instagram entry. They must then provide Fame with their contact e-mail address within 48 hours of notification. Fame accepts no responsibility for unread, undelivered or incorrectly provided email or telephone information.
+
+      p The winners prize will be 2 dresses redeemable online at http://www.fameandpartners.com through correspondence with Fame via e-mail.
+
+      p The runner-up prizes for the next 100 entrants will be a 30% Off E-Gift Card. Runners-up will receive their personalised discount code through an Instagram Direct Message. This E-Gift Card will be valid until 31 December 2015 and is redeemable online at http://www.fameandpartners.com.
+
+      p Prizes cannot be transferred, exchanged or redeemed for cash.
+
+      p Fame reserves the right to re-judge the competition in the event the selected winner is unable to satisfy these terms and conditions,forfeits their prize or does not claimtheir prize. If a prize is forfeited or unclaimed as of 2 November 2015, Fame will announce a new winner at 2:00pm AEST at its registered offices..
+
+      p Fame (and each of its related bodies corporate, their officers, employees and agents) will not be liable for any loss, damage, or personal injury (including but not limited to indirect or consequential loss) whatsoever that is suffered or sustained in connection with this promotion, the promotion of this promotion, the receipt or use of the prizes, except for any liability which cannot be excluded by law. Fame is not responsible for any failure or technical malfunction of any telephone network or lines, computer online systems, or providers, computer equipment, servers, or providers, computer equipment, software, technical failure or traffic congestion on the internet or at any website, or any combination thereof, including but not limited to, any injury or damage you or any other person may suffer related to or resulting from participation in or downloading any materials related to this promotion. In the event of war, terrorism, state of emergency or disaster Fame reserves the right (subject to any written directions under applicable law) to cancel, terminate, modify or suspend this promotion.
+
+      p By submitting your entry, you grant Fame the right and permission (except where prohibited by law) to copy, reproduce, encode, store, transmit, publish, post, broadcast, display, adapt, exhibit and/or otherwise use or reuse (without limitation as to when, where, or the number of times) the Image and your name; Instagram name; image; voice; persona; sobriquet; likeness; statements; and biographical material on Fame’s website located at http://www.fameandpartners.com , Fame’s Instagram account located at http://www.instagram.com/fameandpartners/ and/or the Fame Facebook page located at http://www.facebook.com/fameandpartners for purpose of administering and advertising the promotion, foregoing without additional review, compensation, notice to, or approval from you or any other party, unless prohibited by law. By submitting an Instagram photo with the designated hashtag, you consent to the collection, use, and disclosure of the information described herein.
