added extra links to dresses menu

--- a/app/views/layouts/redesign/_event.html.slim
+++ b/app/views/layouts/redesign/_event.html.slim
@@ -9,3 +9,10 @@ li = link_to 'Prom'         , build_taxon_path('Prom')
 li = link_to 'Homecoming'   , build_taxon_path('Homecoming')
 li = link_to 'Sweet 16'     , build_taxon_path('Sweet 16')
 li = link_to 'Debutante'    , build_taxon_path('Debutante')
+li = link_to 'Spring Racing'    , build_taxon_path('Spring Racing')
+li = link_to 'Party'    , build_taxon_path('Party')
+li = link_to 'New Years Eve'    , build_taxon_path('New Years Eve')
+li = link_to 'Red Carpet'    , build_taxon_path('Red Carpet')
+li = link_to 'Black Tie'    , build_taxon_path('Black Tie')
+li = link_to 'Date Night'    , build_taxon_path('Date Night')
+li = link_to 'Cocktail'    , build_taxon_path('Cocktail')
