--- a/app/views/layouts/redesign/_style.html.slim
+++ b/app/views/layouts/redesign/_style.html.slim
@@ -6,3 +6,4 @@ li = link_to 'V-Neck'      , build_taxon_path('V-Neck')
 li = link_to 'Split'       , build_taxon_path('Split')
 li = link_to 'Backless'    , build_taxon_path('Backless')
 li = link_to 'Lace'        , build_taxon_path('Lace')
+li = link_to 'Maxi'        , build_taxon_path('Maxi')
