--- a/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
+++ b/app/assets/transient_content/2015-new-modal/stylesheets/2015_new_modal.css.scss
@@ -220,7 +220,7 @@
           }
           img.selected{
             border-width: 1px;
-            border-color: #E12D81;
+            border-color: black;
             border-style: solid;
           }
         }
