mobile menu link update

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -149,6 +149,8 @@ ruby:
               = link_to 'Backless', build_taxon_path('Backless'), class: 'text'
             li.normal-item.no-border
               = link_to 'Lace', build_taxon_path('Lace'), class: 'text'
+            li.normal-item.no-border
+              = link_to 'Maxi', build_taxon_path('Maxi'), class: 'text'
             li.grey-item
               .text EVENTS
             li.normal-item
@@ -171,8 +173,22 @@ ruby:
               = link_to 'Homecoming', build_taxon_path('Homecoming'), class: 'text'
             li.normal-item
               = link_to 'Sweet 16', build_taxon_path('Sweet 16'), class: 'text'
-            li.normal-item.no-border
+            li.normal-item
               = link_to 'Debutante', build_taxon_path('Debutante'), class: 'text'
+            li.normal-item
+              = link_to 'Spring Racing', build_taxon_path('Spring Racing'), class: 'text'
+            li.normal-item
+              = link_to 'Party', build_taxon_path('Party'), class: 'text'
+            li.normal-item
+              = link_to 'New Years Eve', build_taxon_path('New Years Eve'), class: 'text'
+            li.normal-item
+              = link_to 'Red Carpet', build_taxon_path('Red Carpet'), class: 'text'
+            li.normal-item
+              = link_to 'Black Tie', build_taxon_path('Black Tie'), class: 'text'
+            li.normal-item
+              = link_to 'Date Night', build_taxon_path('Date Night'), class: 'text'
+            li.normal-item.no-border
+              = link_to 'Cocktail', build_taxon_path('Cocktail'), class: 'text'
 
         /!        
           div#events-menu
