added missing item divider to mobile menu

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -147,7 +147,7 @@ ruby:
               = link_to 'Split', build_taxon_path('Split'), class: 'text'
             li.normal-item
               = link_to 'Backless', build_taxon_path('Backless'), class: 'text'
-            li.normal-item.no-border
+            li.normal-item
               = link_to 'Lace', build_taxon_path('Lace'), class: 'text'
             li.normal-item.no-border
               = link_to 'Maxi', build_taxon_path('Maxi'), class: 'text'
