updated hero sarah ellen link

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -5,7 +5,7 @@ ruby:
 .page-content.index
   // TODO: create helper for multisource images
   = react_component('HeroCarousel', skin: 'skin-light',
-    assets: [{link: dance_hall_days_collection_path, src: '/assets/home-page-tiles/hero-4', alt: 'Dance Hall Days - Shop all formal dresses'}, {link: lookbook_path + '/photo-finish', src: '/assets/home-page-tiles/hero-2', alt: 'Photo FINISH - Shop Now'}, {link: lookbook_path + '/make-a-statement', src: '/assets/home-page-tiles/hero-3', alt: 'Bambi - Shop the Collection'}])
+    assets: [{link: '/sarah-ellen', src: '/assets/home-page-tiles/hero-4', alt: 'Dance Hall Days - Shop all formal dresses'}, {link: lookbook_path + '/photo-finish', src: '/assets/home-page-tiles/hero-2', alt: 'Photo FINISH - Shop Now'}, {link: lookbook_path + '/make-a-statement', src: '/assets/home-page-tiles/hero-3', alt: 'Bambi - Shop the Collection'}])
 
   section.banner-sale
     .container
