CTOLO Update terms

--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -210,7 +210,7 @@
 
       p Entry is open internationally to anyone aged 16 years or older. Directors, officers and employees of Fame and any associated companies and agencies as well as the immediate families of each of these parties are not eligible to participate in the promotion.
 
-      p The promotion begins at 9:00am AEST 21 October 2015 and closes 9:00am AEST 28 October 2015.
+      p The promotion begins at 5:00pm AEST 23 October 2015 and closes 5:00pm AEST 30 October 2015
 
       p
         | To be eligible to win the prize you must:
