Amend link and text for yelp

--- a/app/views/statics/yelp.html.slim
+++ b/app/views/statics/yelp.html.slim
@@ -1,7 +1,7 @@
 .page-title.default
   .container
     .page-title--details
-      h1.no-padding-bottom.text-white Our Journey
+      h1.no-padding-bottom.text-white Our Customer Service Improvements
 .page-content.terms
   .container.relative
     .row.relative
@@ -25,7 +25,7 @@
 
       p Finally, we have invested in our finance team who is now internal and resourced with a couple of full time people, allowing us to stay on top of things like processing refunds!
 
-      p My goal when I started this company was to solve the heartache that often accompanies dressing up for a special event so please don’t hesitate to reach out if you have any suggestions to help us improve our goal to delivering upon this.
+      p My goal when I started this company was to solve the heartache that often accompanies dressing up for a special event so please don’t hesitate to reach out if you have any suggestions to help us achieve this.
 
       p
         | Yours in Style
