Make footer bold

--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -51,7 +51,7 @@
         li.footer-nav--item
           = link_to 'New Sizing', size_guide_path
         li.footer-nav--item
-          = link_to 'Our Customer Service Improvements', yelp_path
+          = link_to 'Our Customer Service Improvements', yelp_path, :class => 'bold'
 
     .col-md-2.col-sm-3.hidden-xs.hidden-sm.last-col
       ul.footer-nav
